Fix orchestra name in navbar being too large for tiny phones

--- a/site/static/scss/_utilities.scss
+++ b/site/static/scss/_utilities.scss
@@ -2,6 +2,11 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/utilities";
 
+// `is`, or "Inbetween Small", is a
+// new grid breakpoint for tiny devices
+// between Bootstrap's `sm` breakpoint and `xs` breakpoint.
+$grid-breakpoints: map-merge($grid-breakpoints, ("is": 320px));
+
 // Utility function for extending
 // the values of existing Bootstrap utilities.
 // https://getbootstrap.com/docs/5.0/utilities/api/#modify-utilities
